--- a/index.html
+++ b/index.html
@@ -20,11 +20,16 @@
 
 
         <p>
+            Se le preguntara al usuario si quiere entrenar 3 o 4 dias
+        </p>
+
+        
+        <p>
             Luego colocare una funcion que le pregunte al Usuario que tipo de Rutina de Hipertrofia quiere hacer si orientada a la FUERZA / FUERZA RESISTENCIA / METABOLICA
         </p>
 
         
-            Cuando el Usuario elija una de ellas la idea es que le muestre una rutina Semanal compuesta por LUNES MIERCOLES Y VIERNES
+            Cuando el Usuario elija una de ellas la idea es que le muestre una rutina Semanal compuesta por LUNES MIERCOLES Y VIERNES (si elije 3 dias) 
         </p>
 
 
