--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Programa piloto de Rutinas de Entrenamiento de Hipertrofia</h1>
     </header>
     
+    <section>
     <br>
         <p>Mi idea es de proyecto es hacer un programa que tenga la finalidad de generar rutinas de entrenamiento, </p>
 
@@ -32,9 +33,27 @@
             Cuando el Usuario elija una de ellas la idea es que le muestre una rutina Semanal compuesta por LUNES MIERCOLES Y VIERNES (si elije 3 dias) 
         </p>
 
+    </section>
 
 
-    </main>
+    <section>
+       
+    <div id="pruebaDOM">
+
+    </div>
+
+    <div id ="pruebaEjercicios">
+
+    </div>
+    <div>
+
+    </div>
+
+
+
+
+    </section>
+
 >
 <script src="./js/script.js"></script>
 </body>
