--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <div>
                     <div class="col-md-6 d-flex align-items-center justify-content-end">
                         <a href="lista.html" id="boton_carrito" title="Ver Carrito"></a>
-                        <a href="#" id="eliminar_lista" title="Vaciar Lista"><button id="button-text" type="button" class="btn btn-warning"><img src="images/trash3.svg" alt="Eliminar Carrito" width="32"></button></a>
+                        <a href="#" id="eliminar_lista" title="Vaciar Lista"><button id="button-text" type="button" class="btn btn-danger"><img src="images/trash3.svg" alt="Eliminar Carrito" width="32"></button></a>
                     </div>
                 </div>
 
@@ -198,7 +198,7 @@
    
        
 
-
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="./js/lista.js"></script>
 <script src="./js/ejercicios.js"></script>
