--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
         </div>
         
         <div class="container-fluid bebe">
-        
+          <h2 class="titulo">Seleccione los ejercicios y arme su propia rutina e Imprima en pantalla! :</h2>
+          <button id="aplicando" type="button" class="btn btn-danger">Presiona Aca!</button>
             <div id="container" class="row">
             </div>
             <div class="cart-container ">
