--- a/lista.html
+++ b/lista.html
@@ -31,7 +31,7 @@
                 <div >
                   <h2>Elija la cantidad de Series y Repeticiones y pesione aqui!</h2>
                   <button id="cartButtons" class="btn btn-danger" >IMPRIMIR RUTINA</button>
-            
+                  <button id="limpiar" class="btn btn-danger" >LIMPIAR RUTINA</button>
                 </div>
                 
               </div>
