--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="container">
 
           <h2 class="titulo">Seleccione los ejercicios y arme su propia rutina e Imprima en pantalla! :</h2>
-          <button id="aplicando" type="button" class="btn btn-secondary">Presiona Aca!</button>
+          <button id="aplicando" type="button" class="btn btn-secondary">Presiona Aca! y luego el Boton Verde!</button>
             <div id="container" class="row">
             </div>
             <div class="cart-container ">
